fixed spacing between pic

--- a/homeStyle.css
+++ b/homeStyle.css
@@ -63,6 +63,7 @@ body {
     height: 15rem;
     object-fit: cover;
     border: 2px solid black;
+    margin-top: 2rem;
 }
 
 #carneAsada {
